<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="es.source.code.activity.LoginOrRegister">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/userName"
            android:inputType="textPersonName"
            android:singleLine="false" />

        <EditText
            android:id="@+id/userPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passWord"
            android:inputType="textPassword"
            android:singleLine="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg_blue_selector"
            android:text="@string/log"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="152dp"
            tools:layout_editor_absoluteY="252dp" />

        <Button
            android:id="@+id/enterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg_green_selector"
            android:text="@string/enter"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="140dp"
            tools:text="@string/enter" />

        <Button
            android:id="@+id/returnButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg_red_selector"
            android:text="@string/returnto"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="152dp"
            tools:layout_editor_absoluteY="188dp" />
    </LinearLayout>

</LinearLayout>
