<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/HomeLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_column="2"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_row="0"
        app:srcCompat="@mipmap/icon" />


    <android.support.v7.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_weight="1"
        app:rowCount="2">

        <Button
            android:id="@+id/HomeHelpButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/guide_btn_account_selector"
            android:text="@string/help"
            android:visibility="visible"
            app:layout_column="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintVertical_weight="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/HomeMenuButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginBottom="32dp"

            android:background="@drawable/guide_btn_help_selector"
            android:text="@string/menu"
            android:visibility="visible"
            app:layout_column="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/HomeHelpButton"
            app:layout_row="0" />

        <Button
            android:id="@+id/HomeOrderButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginBottom="32dp"

            android:background="@drawable/guide_btn_form_selector"
            android:text="@string/order"
            android:textAllCaps="true"
            android:visibility="visible"
            app:layout_column="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/HomeLoginButton"
            app:layout_row="0" />

        <Button
            android:id="@+id/HomeLoginButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginBottom="32dp"

            android:background="@drawable/guide_btn_order_selector"
            android:text="@string/log"
            android:visibility="visible"
            app:layout_column="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_row="1" />
    </android.support.v7.widget.GridLayout>

</android.support.constraint.ConstraintLayout>